Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,7 +1,9 @@
 [access]
 	inheritFrom = All-Projects
 [project]
-	description = It is a docker container that implements the dbcapi. It optionally can be deployed in a persistent mode which relies on PGaaS, in which case multiple containers can also be deployed for scale/availablity.
+	description = Provides a northbound REST API to ONAP clients to manage DMaaP resources. This includes DMaaP components such as MR and DR, as well as provisioning of topics and feeds. Southbound, it communicates with the respective component APIs.
 [access "refs/*"]
 	read = group GitHub Replication
 	owner = group saml/onap-gerrit-dmaap-buscontroller-committers
+[plugin "its-jira"]
+	enabled = true
