[DMAAP-BC] Package upgrades for I release
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Change-Id: I0cdbb918040e918df0c56d3fb379467d6fac474c
Issue-ID: DMAAP-1608

--- a/dmaap-bc/pom.xml
+++ b/dmaap-bc/pom.xml
@@ -187,7 +187,7 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-http</artifactId>
-      <version>${jettyVersion}</version>
+      <version>9.4.43.v20210629</version>
       <scope>compile</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
@@ -261,6 +261,10 @@
         <exclusion>
           <artifactId>bsh</artifactId>
           <groupId>org.beanshell</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>maven-core</artifactId>
+          <groupId>org.apache.maven</groupId>
         </exclusion>
       </exclusions>
     </dependency>
