[DMAAP-BC] Fix jjb failure
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Change-Id: Ib8c2da892119df643f396b98891717e1e848daf0
Issue-ID: DMAAP-1682

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
           <configuration>
             <excludes>
             </excludes>
+            <forkCount>0</forkCount>
             <argLine>
               ${surefireArgLine} --illegal-access=permit
             </argLine>
