[DMAAP-BC] Upgrade packages for London rel
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Change-Id: I65e2a2e7e344c6575168ed020cd7adab2d6606ee
Issue-ID: DMAAP-1844

--- a/csit/scripts/dmaap-buscontroller/docker-compose/dmaapbc.properties
+++ b/csit/scripts/dmaap-buscontroller/docker-compose/dmaapbc.properties
@@ -6,7 +6,7 @@
 #####################################################
 # Indicator for whether to use AAF for authentication
 UseAAF: false
-
+enableCADI: false
 # Stub out southbound calls for Unit Test cases to run.  e.g. not timeout
 # Comment out in other environments to get default (No)
 #UnitTest: Yes
@@ -95,7 +95,7 @@ MR.TopicMgrRole: org.onap.dmaap-bc-topic-mgr.client
 MR.projectID:  mr
 
 # Use Basic Authentication when provisioning topics
-MR.authentication: basicAuth
+MR.authentication: none
 
 # MR topic name style (default is FQTN_LEGACY_FORMAT)
 #MR.topicStyle: FQTN_LEGACY_FORMAT
@@ -126,7 +126,7 @@ ApiPermission.Class: org.onap.dmaap.dbcapi.authentication.AllowAll
 # Indicates how we are expecting certificates to be provided:
 #  cadi - a set of artifacts will be downloaded from AAF at deployment time, and details will be in a cadi properties file
 #  legacy (default) - artifacts will be installed manually or some other way and details will be in this file
-CertificateManagement: cadi
+CertificateManagement: legacy
 
 # When CertificateManagement is cadi, then this is where all the cadi properties will be.
 # Note that the cadi properties include where the cert is, and the encrypted passwords to read.
@@ -147,4 +147,4 @@ IntHttpPort: 8080
 
 # listen to https port within this container (server)
 # set to 0 if no certificates are available.
-IntHttpsPort: 8443
+IntHttpsPort: 0
